--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "accelerate>=1.11.0",
     "ipykernel>=7.1.0",
+    "nvitop>=1.6.0",
+    "peft>=0.18.0",
+    "tensorboard>=2.20.0",
     "transformers>=4.57.1",
     "trl",
 ]
